--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       }
     </style>
   </head>
-  <body class="font-aref">
+  <body class="font-aref bg-white">
     <div>
       <img src="images/background.png" class="absolute min-w-full" />
       <div class="flex flex-row relative">
